Fix .fb-like breking on mobile

--- a/source/stylesheets/_lead.scss
+++ b/source/stylesheets/_lead.scss
@@ -21,4 +21,9 @@
       }
     }
   }
+  .fb-like {
+    &, span, iframe {
+      max-width: 100% !important;
+    }
+  }
 }
